--- a/package.json
+++ b/package.json
@@ -87,12 +87,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/proto2fetch.git"
+    "url": "https://github.com/szy0syz/proto2fetch.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/proto2fetch/issues"
+    "url": "https://github.com/szy0syz/proto2fetch/issues"
   },
-  "homepage": "https://github.com/yourusername/proto2fetch#readme",
+  "homepage": "https://github.com/szy0syz/proto2fetch#readme",
   "author": "szy0syz",
   "license": "MIT",
   "packageManager": "pnpm@10.12.4"
